--- a/TemRemedioAi/app/src/main/res/menu/menu_main.xml
+++ b/TemRemedioAi/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_maps"
+        android:orderInCategory="100"
+        android:title="@string/action_maps"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/search"
