--- a/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
@@ -3,11 +3,43 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="TESTE" />
+        android:layout_height="110dp"
+        android:weightSum="1">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Faculdade do Gama - UNB"
+            android:id="@+id/textViewTitleUbs"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.30" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Endereço:"
+            android:id="@+id/textViewTitleEndereco"
+            android:layout_marginLeft="10dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="DF - 040"
+            android:id="@+id/textView2"
+            android:layout_marginLeft="10dp" />
+
+    </LinearLayout>
 
     <fragment
         xmlns:map="http://schemas.android.com/apk/res-auto"
