--- a/TemRemedioAi/app/src/main/res/layout/activity_main.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.tra.gppmds.temremdioa.MainActivity">
+    tools:context="com.gppmds.tra.temremdioa.controller.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
