--- a/TemRemedioAi/app/src/main/res/layout/card_list_item.xml
+++ b/TemRemedioAi/app/src/main/res/layout/card_list_item.xml
@@ -24,7 +24,7 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/TextAppearance.AppCompat.Headline"
+            style="@style/TextAppearance.AppCompat.Small"
             android:ellipsize="end"
             android:singleLine="true"
             android:text="@string/testeTexto"/>
