--- a/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
@@ -6,22 +6,22 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="110dp"
+        android:layout_height="wrap_content"
         android:weightSum="1">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Faculdade do Gama - UNB"
             android:id="@+id/textViewTitleUbs"
             android:textAlignment="center"
             android:layout_marginTop="10dp" />
+            <!--android:text="Nome da UBS"-->
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.30" />
+            android:layout_weight="0.50" />
 
         <TextView
             android:layout_width="match_parent"
@@ -35,19 +35,64 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="DF - 040"
-            android:id="@+id/textView2"
+            android:id="@+id/textViewDscEndereco"
+            android:layout_marginLeft="10dp" />
+            <!--android:text="DF - 040"-->
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/textViewDscBairro"
+            android:layout_marginLeft="10dp" />
+            <!--android:text="Bairro"-->
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/textViewCidade"
+            android:layout_marginLeft="10dp" />
+            <!--android:text="Cidade"-->
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Telefone:"
+            android:id="@+id/textViewTitleTelefone"
             android:layout_marginLeft="10dp" />
 
-    </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/textViewDscTelefone"
+            android:layout_marginLeft="10dp" />
+            <!--android:text="num telefone"-->
 
-    <fragment
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.MapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.gppmds.tra.temremdioa.controller.UbsMapsActivity" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Adaptado"
+            android:id="@+id/textViewTitleAdaptado"
+            android:layout_marginLeft="10dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50" />
+
+</LinearLayout>
+
+<fragment
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/map"
+    android:name="com.google.android.gms.maps.MapFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.gppmds.tra.temremdioa.controller.UbsMapsActivity" />
 
 </LinearLayout>
