Adjust of info about UBS in description of that

--- a/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
@@ -93,6 +93,6 @@
     android:name="com.google.android.gms.maps.MapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gppmds.tra.temremdioa.controller.UbsMapsActivity" />
+    tools:context="com.gppmds.tra.temremdioa.controller.UBSMapsActivity" />
 
 </LinearLayout>
