--- a/TemRemedioAi/app/src/main/res/layout/activity_main.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#8B0000"
+        android:background="#CD0000"
         android:paddingTop="@dimen/appbar_padding_top"
         android:theme="@style/AppTheme.AppBarOverlay">
 
