--- a/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
@@ -15,13 +15,16 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/textViewTitleUbs"
             android:textAlignment="center"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:textSize="25dp" />
             <!--android:text="Nome da UBS"-->
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.50" />
+            android:layout_weight="3.35" />
+
+        <!--android:text="DF - 040"-->
 
         <TextView
             android:layout_width="match_parent"
@@ -29,7 +32,11 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Endereço:"
             android:id="@+id/textViewTitleEndereco"
-            android:layout_marginLeft="10dp" />
+            android:layout_marginLeft="10dp"
+            android:textStyle="italic"
+            android:textSize="20dp" />
+
+        <!--android:text="Bairro"-->
 
         <TextView
             android:layout_width="match_parent"
@@ -37,7 +44,6 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/textViewDscEndereco"
             android:layout_marginLeft="10dp" />
-            <!--android:text="DF - 040"-->
 
         <TextView
             android:layout_width="match_parent"
@@ -45,7 +51,6 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/textViewDscBairro"
             android:layout_marginLeft="10dp" />
-            <!--android:text="Bairro"-->
 
         <TextView
             android:layout_width="match_parent"
@@ -56,15 +61,18 @@
             <!--android:text="Cidade"-->
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Telefone:"
             android:id="@+id/textViewTitleTelefone"
-            android:layout_marginLeft="10dp" />
+            android:layout_marginLeft="10dp"
+            android:singleLine="false"
+            android:textStyle="italic"
+            android:textSize="20dp" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="368dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/textViewDscTelefone"
@@ -77,7 +85,9 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Adaptado"
             android:id="@+id/textViewTitleAdaptado"
-            android:layout_marginLeft="10dp" />
+            android:layout_marginLeft="10dp"
+            android:textStyle="italic"
+            android:textSize="20dp" />
 
         <Space
             android:layout_width="match_parent"
