--- a/TemRemedioAi/app/src/main/res/values/colors.xml
+++ b/TemRemedioAi/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F44336</color>
-    <color name="colorPrimaryDark">#D32F2F</color>
+    <color name="colorPrimary">#CD0000</color>
+    <color name="colorPrimaryDark">#8B0000</color>
     <color name="colorAccent">#FFFFFF</color>
 </resources>
