--- a/TemRemedioAi/app/src/main/res/menu/menu_main.xml
+++ b/TemRemedioAi/app/src/main/res/menu/menu_main.xml
@@ -1,4 +1,5 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.gppmds.tra.temremdioa.controller.MainActivity">
@@ -13,5 +14,12 @@
         android:orderInCategory="100"
         android:title="@string/action_maps"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_search"
+        android:title="@string/search"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 
 </menu>
