--- a/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
@@ -1,108 +1,86 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
-    <LinearLayout
+    <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:weightSum="1">
 
+        <fragment
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.gppmds.tra.temremdioa.controller.UbsMapsActivity"
+            android:layout_alignParentStart="true" />
+
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/textViewTitleUbs"
+        android:textAlignment="center"
+        android:layout_marginTop="40dp"
+        android:textSize="22dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="19dp"
+        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp" />
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="53dp"
+            android:layout_height="53dp"
+            android:background="@drawable/ic_place"
+            android:layout_alignParentBottom="true"
+            android:layout_alignStart="@+id/textViewDscEndereco"
+            android:layout_weight="0.05"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_rowSpan="2"
+            android:layout_marginLeft="10dp" />
+
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/textViewTitleUbs"
-            android:textAlignment="center"
-            android:layout_marginTop="10dp"
-            android:textSize="25dp" />
-            <!--android:text="Nome da UBS"-->
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="3.35" />
-
-        <!--android:text="DF - 040"-->
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Endereço:"
-            android:id="@+id/textViewTitleEndereco"
-            android:layout_marginLeft="10dp"
-            android:textStyle="italic"
-            android:textSize="20dp" />
-
-        <!--android:text="Bairro"-->
-
-        <TextView
-            android:layout_width="match_parent"
+            android:layout_width="306dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/textViewDscEndereco"
-            android:layout_marginLeft="10dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/textViewDscBairro"
-            android:layout_marginLeft="10dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/textViewCidade"
-            android:layout_marginLeft="10dp" />
-            <!--android:text="Cidade"-->
+            android:layout_alignTop="@+id/textViewDscBairro"
+            android:layout_alignParentStart="true"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Telefone:"
-            android:id="@+id/textViewTitleTelefone"
-            android:layout_marginLeft="10dp"
-            android:singleLine="false"
-            android:textStyle="italic"
-            android:textSize="20dp" />
-
-        <TextView
-            android:layout_width="368dp"
-            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/textViewDscTelefone"
-            android:layout_marginLeft="10dp" />
-            <!--android:text="num telefone"-->
+            android:id="@+id/textViewDscBairro"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_weight="0.06"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="10dp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Adaptado"
-            android:id="@+id/textViewTitleAdaptado"
-            android:layout_marginLeft="10dp"
-            android:textStyle="italic"
-            android:textSize="20dp" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.50" />
-
-</LinearLayout>
-
-<fragment
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.MapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.gppmds.tra.temremdioa.controller.UbsMapsActivity" />
+    </GridLayout>
 
 </LinearLayout>
