--- a/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
@@ -1,86 +1,99 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="1">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:weightSum="1">
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <fragment
-            xmlns:map="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+
+            <fragment
             android:id="@+id/map"
-            android:name="com.google.android.gms.maps.MapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+                xmlns:map="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="195dp"
+                android:name="com.google.android.gms.maps.MapFragment"
             tools:context="com.gppmds.tra.temremdioa.controller.UbsMapsActivity"
             android:layout_alignParentStart="true" />
 
-    </RelativeLayout>
 
-    <TextView
-        android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/viewB"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.4"
+            android:orientation="horizontal">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:id="@+id/textViewTitleUbs"
+                    android:textAlignment="center"
+                    android:layout_marginTop="40dp"
+                    android:textSize="22dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp" />
+
+                <ImageView
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:background="@drawable/ic_place"
+                    android:layout_weight="0.05"
+                    android:layout_row="0"
+                    android:layout_column="0"
+                    android:layout_rowSpan="2"
+                    android:layout_marginLeft="10dp"
+                    android:id="@+id/imageView"
+                    android:layout_centerVertical="true"
+                    android:layout_alignStart="@+id/textViewTitleUbs" />
+
+                <TextView
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:id="@+id/textViewDscEndereco"
+                    android:layout_row="0"
+                    android:layout_column="1"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/imageView" />
+
+                <TextView
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:id="@+id/textViewDscBairro"
+                    android:layout_row="0"
+                    android:layout_column="1"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_below="@+id/textViewDscEndereco"
+                    android:layout_toEndOf="@+id/imageView" />
+
+            </RelativeLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/textViewTitleUbs"
-        android:textAlignment="center"
-        android:layout_marginTop="40dp"
-        android:textSize="22dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" />
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:scaleType="center"
+        android:src="@drawable/ic_directions"
+        app:backgroundTint="#3d6aff"
+        app:layout_anchor="@id/map"
+        app:layout_anchorGravity="bottom|right|end"/>
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="19dp"
-        android:layout_margin="10dp"
-        android:layout_marginLeft="10dp" />
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:layout_width="53dp"
-            android:layout_height="53dp"
-            android:background="@drawable/ic_place"
-            android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/textViewDscEndereco"
-            android:layout_weight="0.05"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_rowSpan="2"
-            android:layout_marginLeft="10dp" />
-
-        <TextView
-            android:layout_width="306dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/textViewDscEndereco"
-            android:layout_alignTop="@+id/textViewDscBairro"
-            android:layout_alignParentStart="true"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/textViewDscBairro"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_weight="0.06"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="10dp" />
-
-    </GridLayout>
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
