--- a/TemRemedioAi/app/src/main/res/layout/app_toolbar.xml
+++ b/TemRemedioAi/app/src/main/res/layout/app_toolbar.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="#CD0000"
+    android:background="#e6312e"
     app:layout_scrollFlags="scroll|enterAlways"
     app:popupTheme="@style/AppTheme.PopupOverlay">
 </android.support.v7.widget.Toolbar>
