--- a/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
@@ -1,23 +1,22 @@
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
 
-            <fragment
-            android:id="@+id/map"
-                xmlns:map="http://schemas.android.com/apk/res-auto"
+        <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="195dp"
-                android:name="com.google.android.gms.maps.MapFragment"
-            tools:context="com.gppmds.tra.temremdioa.controller.UbsMapsActivity"
-            android:layout_alignParentStart="true" />
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="195dp"
+            android:layout_alignParentStart="true"
+            tools:context="com.gppmds.tra.temremdioa.controller.UbsMapsActivity" />
 
 
         <LinearLayout
@@ -32,52 +31,52 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/textViewTitleUbs"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:id="@+id/textViewTitleUbs"
-                    android:textAlignment="center"
-                    android:layout_marginTop="40dp"
-                    android:textSize="22dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp" />
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="40dp"
+                    android:textAlignment="center"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="22dp" />
 
                 <ImageView
+                    android:id="@+id/imageView"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:background="@drawable/ic_place"
-                    android:layout_weight="0.05"
-                    android:layout_row="0"
+                    android:layout_alignStart="@+id/textViewTitleUbs"
+                    android:layout_centerVertical="true"
                     android:layout_column="0"
-                    android:layout_rowSpan="2"
                     android:layout_marginLeft="10dp"
-                    android:id="@+id/imageView"
-                    android:layout_centerVertical="true"
-                    android:layout_alignStart="@+id/textViewTitleUbs" />
+                    android:layout_row="0"
+                    android:layout_rowSpan="2"
+                    android:layout_weight="0.05"
+                    android:background="@drawable/ic_place" />
 
                 <TextView
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:id="@+id/textViewDscEndereco"
-                    android:layout_row="0"
-                    android:layout_column="1"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/imageView" />
-
-                <TextView
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:id="@+id/textViewDscBairro"
-                    android:layout_row="0"
+                    android:layout_centerVertical="true"
                     android:layout_column="1"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="10dp"
+                    android:layout_row="0"
+                    android:layout_toEndOf="@+id/imageView"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <TextView
+                    android:id="@+id/textViewDscBairro"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/textViewDscEndereco"
-                    android:layout_toEndOf="@+id/imageView" />
+                    android:layout_column="1"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_row="0"
+                    android:layout_toEndOf="@+id/imageView"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
             </RelativeLayout>
         </LinearLayout>
@@ -94,6 +93,6 @@
         android:src="@drawable/ic_directions"
         app:backgroundTint="#3d6aff"
         app:layout_anchor="@id/map"
-        app:layout_anchorGravity="bottom|right|end"/>
+        app:layout_anchorGravity="bottom|right|end" />
 
 </android.support.design.widget.CoordinatorLayout>
