--- a/TemRemedioAi/app/src/main/res/menu/menu_main.xml
+++ b/TemRemedioAi/app/src/main/res/menu/menu_main.xml
@@ -13,7 +13,7 @@
     <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
-        android:title="@string/action_about"
+        android:title="@string/title_activity_about"
         app:showAsAction="never" />
 
     <item
