--- a/TemRemedioAi/app/src/main/res/layout/activity_about.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_about.xml
@@ -33,7 +33,8 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:layout_below="@+id/textView"
-        android:id="@+id/textView2" />
+        android:id="@+id/textView2"
+        android:layout_marginTop="20dp" />
 
     <TextView
         android:text="Sobre o Aplicativo"
