--- a/TemRemedioAi/app/src/main/res/layout/card_list_remedio.xml
+++ b/TemRemedioAi/app/src/main/res/layout/card_list_remedio.xml
@@ -45,7 +45,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/imageView"
+                android:id="@+id/imageViewArrow"
                 android:padding="8dp"
                 android:layout_alignParentEnd="true"
                 android:background="@drawable/ic_keyboard_arrow_down" />
