--- a/TemRemedioAi/app/src/main/res/layout/activity_select_ubs.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_select_ubs.xml
@@ -3,17 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.gppmds.tra.temremdioa.controller.SelectUBSActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/panelInfosSuperior"
+        android:elevation="2dp"
+        android:padding="4dp">
+
+        <TextView
+            android:id="@+id/textViewRemedioSelecionado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Remédio Selecionado"
+            android:textSize="14sp"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:id="@+id/textViewQuantidadeItens"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Quantidade de Itens"
+            android:textSize="14sp"
+            android:layout_alignParentEnd="true"/>
+
+    </RelativeLayout>
 
     <include
         layout="@layout/fragment_ubs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"></include>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/panelInfosSuperior"></include>
 </RelativeLayout>
