--- a/TemRemedioAi/app/src/main/res/layout/card_list_remedio.xml
+++ b/TemRemedioAi/app/src/main/res/layout/card_list_remedio.xml
@@ -8,8 +8,7 @@
     android:layout_marginBottom="1dp"
     android:layout_width="match_parent"
     app:cardElevation="1dp"
-    android:layout_height="wrap_content"
-    android:weightSum="1">
+    android:layout_height="wrap_content">
     <!--android:id="@+id/cardViewRemedio"-->
 
     <RelativeLayout
