--- a/TemRemedioAi/app/src/main/res/layout/activity_about.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_about.xml
@@ -37,7 +37,7 @@
         android:layout_marginTop="20dp" />
 
     <TextView
-        android:text="Sobre o Aplicativo"
+        android:text="@string/about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:textAppearanceLarge"
