Fixing Register front end

--- a/TemRemedioAi/app/src/main/res/layout/activity_register.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_register.xml
@@ -37,7 +37,9 @@
                     android:ems="10"
                     android:id="@+id/name"
                     android:layout_gravity="center_horizontal"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/colorPrimary"
+                    android:backgroundTint="@color/colorPrimary"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -52,7 +54,9 @@
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/colorPrimary"
+                    android:backgroundTint="@color/colorPrimary"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -60,21 +64,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sexo"
-                android:id="@+id/textView" />
+                android:id="@+id/textView"
+                android:backgroundTint="@color/colorPrimary"/>
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Feminino"
                 android:id="@+id/femButton"
-                android:checked="false" />
+                android:checked="false"
+                android:buttonTint="@color/colorPrimary"/>
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Masculino"
                 android:id="@+id/mascButton"
-                android:checked="false" />
+                android:checked="false"
+                android:buttonTint="@color/colorPrimary"/>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -87,7 +94,9 @@
                     android:hint="@string/prompt_age"
                     android:inputType="numberDecimal"
                     android:ems="10"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/colorPrimary"
+                    android:backgroundTint="@color/colorPrimary"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -105,7 +114,9 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/colorPrimary"
+                    android:backgroundTint="@color/colorPrimary"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -123,7 +134,9 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/colorPrimary"
+                    android:backgroundTint="@color/colorPrimary"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -134,7 +147,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/action_sign_in"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                android:backgroundTint="@color/colorPrimary"/>
+
+            <Button
+                android:id="@+id/register_cancel"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/cancel"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                android:backgroundTint="@color/colorPrimary"/>
 
         </LinearLayout>
     </ScrollView>
