--- a/TemRemedioAi/app/src/main/res/menu/menu_main.xml
+++ b/TemRemedioAi/app/src/main/res/menu/menu_main.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/action_login"
         android:orderInCategory="100"
-        android:title="@string/action_login"
+        android:title="@string/action_log_in"
         app:showAsAction="never"/>
 
     <item
