--- a/TemRemedioAi/app/src/main/res/layout/activity_register.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="com.gppmds.tra.temremdioa.controller.RegisterActivity">
+    tools:context="com.gppmds.tra.temremdioa.controller.SignUpActivity">
 
     <ProgressBar
         android:id="@+id/login_progress"
